<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.sinri</groupId>
    <artifactId>keel-aliyun</artifactId>
    <!--    <version>5.0.0-SNAPSHOT</version>-->
    <version>5.0.0-rc.10</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mavenSourcePluginVersion>3.3.1</mavenSourcePluginVersion>
        <mavenJavadocPluginVersion>3.12.0</mavenJavadocPluginVersion>
        <mavenCompilerPluginVersion>3.14.1</mavenCompilerPluginVersion>
        <mavenSurefirePluginVersion>3.5.4</mavenSurefirePluginVersion>
        <mavenGpgPluginVersion>3.2.8</mavenGpgPluginVersion>
        <nexusStagingMavenPluginVersion>1.7.0</nexusStagingMavenPluginVersion>
        <vertxVersion>5.0.5</vertxVersion>
        <lz4Version>1.8.0</lz4Version>
        <protobufVersion>4.31.1</protobufVersion>
        <keelTestVersion>5.0.0-rc.11</keelTestVersion>
        <keelCoreVersion>5.0.0-rc.12</keelCoreVersion>
    </properties>

    <name>Keel-Aliyun</name>
    <description>
        The Keel Integration for Aliyun
    </description>

    <url>https://github.com/sinri/keel-aliyun</url>

    <licenses>
        <license>
            <name>GPL-v3.0</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/sinri/keel-aliyun.git</url>
    </scm>

    <developers>
        <developer>
            <name>Sinri Edogawa</name>
            <email>e.joshua.s.e@gmail.com</email>
            <organization>Sinri Edogawa</organization>
            <organizationUrl>https://sinri.github.io</organizationUrl>
        </developer>
    </developers>


    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>config.properties</exclude>
                </excludes>
                <filtering>false</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>17</release>
                    <source>17</source>
                    <target>17</target>
                </configuration>
                <version>${mavenCompilerPluginVersion}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
                <version>${mavenSourcePluginVersion}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${mavenJavadocPluginVersion}</version>
                <configuration>
                    <!-- 配置Javadoc生成参数 -->
                    <encoding>UTF-8</encoding> <!-- 编码格式 -->
                    <docencoding>UTF-8</docencoding> <!-- 文档编码 -->
                    <charset>UTF-8</charset> <!-- 字符集 -->
                    <show>protected</show> <!-- 显示公共成员 -->
                    <doctitle>${project.name} ${project.version} Document</doctitle> <!-- 文档标题 -->
                    <windowtitle>${project.name} ${project.version} Document</windowtitle> <!-- 窗口标题 -->
                    <!-- 可选：解决 JDK 11+ 的 doclint 严格检查 -->
                    <!--                            <doclint>none</doclint>-->
                    <!-- 若使用 JPMS，确保模块图等正确生成 -->
                    <detectOfflineLinks>false</detectOfflineLinks>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${mavenSurefirePluginVersion}</version>
                <configuration>
                    <includes>
                        <include>io/github/sinri/keel/base/**/*UnitTest.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${mavenGpgPluginVersion}</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>internal</id>
            <distributionManagement>
                <snapshotRepository>
                    <id>snapshots</id>
                    <url>https://nexus.leqeegroup.com/repository/snapshots/</url>
                </snapshotRepository>
                <repository>
                    <id>releases</id>
                    <url>https://nexus.leqeegroup.com/repository/releases/</url>
                </repository>
            </distributionManagement>
        </profile>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>${nexusStagingMavenPluginVersion}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://ossrh-staging-api.central.sonatype.com</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                            <stagingProgressTimeoutMinutes>20</stagingProgressTimeoutMinutes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <distributionManagement>
                <snapshotRepository>
                    <id>snapshots</id>
                    <url>https://nexus.leqeegroup.com/repository/snapshots/</url>
                </snapshotRepository>
                <repository>
                    <id>ossrh</id>
                    <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository>
            </distributionManagement>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>io.github.sinri</groupId>
            <artifactId>keel-test</artifactId>
            <version>${keelTestVersion}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.github.sinri</groupId>
            <artifactId>keel-core</artifactId>
            <version>${keelCoreVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.lz4</groupId>
            <artifactId>lz4-java</artifactId>
            <version>${lz4Version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <version>${protobufVersion}</version>
        </dependency>
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-web-client</artifactId>
            <version>${vertxVersion}</version>
        </dependency>
    </dependencies>
</project>